Updated the styles.css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,8 +146,7 @@ small {
 }
 
 #contactUsFormContent {
-    background-color: #BAFFAD;
-    border-radius: 10px 10px 10px 10px;
+    background-color: #FFF9E6;
 }
 
 #footerContent {
